feat: API 검증 및 수정 완료
- 내부 API 보안 강화 (API Key 적용)
- 매거진 피드 페이징 처리 구현
- 사용자 비밀번호 노출 보안 취약점 수정 (@JsonIgnore)
- API 통합 테스트 추가 (관심사, 내부 API, 상호작용)